--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
   "plugins": [
     "react-hot-loader/babel",
     "@babel/plugin-proposal-optional-chaining",
+    "@babel/plugin-proposal-class-properties",
     "@babel/plugin-proposal-nullish-coalescing-operator",
     ["@babel/plugin-proposal-pipeline-operator", { "proposal": "minimal" }]
   ]
